# aegisDB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
benchmarks/: b_tree_benchmark.cpp
include/: state_machine.h
include/catalog/: column.h  schema.h
include/common/: rwlatch.h  state_machine.h
include/concurrency/: transaction.h
include/network/: raft_server.h
include/recovery/: log_manager.h  log_record.h  log_recovery.h
include/storage/: buffer_pool.h  page.h  pager.h  record_id.h  storage_engine.h  table_heap.h  table_page.h  tuple.h
include/storage/index/: b_plus_tree.h  b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.h  index_iterator.h  tuple_comparator.h
include/type/: type_id.h  value.h
proto/: raft.proto
scripts/: build-image.sh  common.sh  env.sh  load-image.sh  prepare-data.sh  pull-image.sh  push-image.sh  save-image.sh  start-client.sh  start-node.sh  start-node1.sh  start-node2.sh  start-node3.sh  stop-nodes.sh
src/network/: client_main.cpp  raft_server.cpp  server_main.cpp
src/recovery/: log_manager.cpp  log_recovery.cpp
src/storage/: buffer_pool.cpp  pager.cpp  storage_engine.cpp  table_heap.cpp  table_page.cpp  tuple.cpp
src/storage/index/: b_plus_tree.cpp  b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  index_iterator.cpp
src/type/: value.cpp
tests/recovery/: log_recovery_test.cpp
tests/storage/: buffer_pool_test.cpp  pager_test.cpp  schema_metadata_test.cpp  storage_engine_test.cpp
